# muchcool

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
lib/: CMakeLists.txt
util/: CMakeLists.txt
